@@ -797,12 +797,88 @@ name|normalized
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**    * Utility method to validate a resource request, by insuring that the    * requested memory/vcore is non-negative and not greater than max    *     * @throws InvalidResourceRequestException when there is invalid request    */
-DECL|method|validateResourceRequest (ResourceRequest resReq, Resource maximumResource, String queueName, YarnScheduler scheduler)
+DECL|method|normalizeNodeLabelExpressionInRequest ( ResourceRequest resReq, QueueInfo queueInfo)
+specifier|private
+specifier|static
+name|void
+name|normalizeNodeLabelExpressionInRequest
+parameter_list|(
+name|ResourceRequest
+name|resReq
+parameter_list|,
+name|QueueInfo
+name|queueInfo
+parameter_list|)
+block|{
+name|String
+name|labelExp
+init|=
+name|resReq
+operator|.
+name|getNodeLabelExpression
+argument_list|()
+decl_stmt|;
+comment|// if queue has default label expression, and RR doesn't have, use the
+comment|// default label expression of queue
+if|if
+condition|(
+name|labelExp
+operator|==
+literal|null
+operator|&&
+name|queueInfo
+operator|!=
+literal|null
+operator|&&
+name|ResourceRequest
+operator|.
+name|ANY
+operator|.
+name|equals
+argument_list|(
+name|resReq
+operator|.
+name|getResourceName
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|labelExp
+operator|=
+name|queueInfo
+operator|.
+name|getDefaultNodeLabelExpression
+argument_list|()
+expr_stmt|;
+block|}
+comment|// If labelExp still equals to null, set it to be NO_LABEL
+if|if
+condition|(
+name|labelExp
+operator|==
+literal|null
+condition|)
+block|{
+name|labelExp
+operator|=
+name|RMNodeLabelsManager
+operator|.
+name|NO_LABEL
+expr_stmt|;
+block|}
+name|resReq
+operator|.
+name|setNodeLabelExpression
+argument_list|(
+name|labelExp
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|normalizeAndValidateRequest (ResourceRequest resReq, Resource maximumResource, String queueName, YarnScheduler scheduler, boolean isRecovery)
 specifier|public
 specifier|static
 name|void
-name|validateResourceRequest
+name|normalizeAndValidateRequest
 parameter_list|(
 name|ResourceRequest
 name|resReq
@@ -815,6 +891,119 @@ name|queueName
 parameter_list|,
 name|YarnScheduler
 name|scheduler
+parameter_list|,
+name|boolean
+name|isRecovery
+parameter_list|)
+throws|throws
+name|InvalidResourceRequestException
+block|{
+name|QueueInfo
+name|queueInfo
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|queueInfo
+operator|=
+name|scheduler
+operator|.
+name|getQueueInfo
+argument_list|(
+name|queueName
+argument_list|,
+literal|false
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+comment|// it is possible queue cannot get when queue mapping is set, just ignore
+comment|// the queueInfo here, and move forward
+block|}
+name|SchedulerUtils
+operator|.
+name|normalizeNodeLabelExpressionInRequest
+argument_list|(
+name|resReq
+argument_list|,
+name|queueInfo
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|!
+name|isRecovery
+condition|)
+block|{
+name|validateResourceRequest
+argument_list|(
+name|resReq
+argument_list|,
+name|maximumResource
+argument_list|,
+name|queueInfo
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+DECL|method|normalizeAndvalidateRequest (ResourceRequest resReq, Resource maximumResource, String queueName, YarnScheduler scheduler)
+specifier|public
+specifier|static
+name|void
+name|normalizeAndvalidateRequest
+parameter_list|(
+name|ResourceRequest
+name|resReq
+parameter_list|,
+name|Resource
+name|maximumResource
+parameter_list|,
+name|String
+name|queueName
+parameter_list|,
+name|YarnScheduler
+name|scheduler
+parameter_list|)
+throws|throws
+name|InvalidResourceRequestException
+block|{
+name|normalizeAndValidateRequest
+argument_list|(
+name|resReq
+argument_list|,
+name|maximumResource
+argument_list|,
+name|queueName
+argument_list|,
+name|scheduler
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Utility method to validate a resource request, by insuring that the    * requested memory/vcore is non-negative and not greater than max    *     * @throws InvalidResourceRequestException when there is invalid request    */
+DECL|method|validateResourceRequest (ResourceRequest resReq, Resource maximumResource, QueueInfo queueInfo)
+specifier|public
+specifier|static
+name|void
+name|validateResourceRequest
+parameter_list|(
+name|ResourceRequest
+name|resReq
+parameter_list|,
+name|Resource
+name|maximumResource
+parameter_list|,
+name|QueueInfo
+name|queueInfo
 parameter_list|)
 throws|throws
 name|InvalidResourceRequestException
@@ -929,38 +1118,6 @@ argument_list|()
 argument_list|)
 throw|;
 block|}
-comment|// Get queue from scheduler
-name|QueueInfo
-name|queueInfo
-init|=
-literal|null
-decl_stmt|;
-try|try
-block|{
-name|queueInfo
-operator|=
-name|scheduler
-operator|.
-name|getQueueInfo
-argument_list|(
-name|queueName
-argument_list|,
-literal|false
-argument_list|,
-literal|false
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|e
-parameter_list|)
-block|{
-comment|// it is possible queue cannot get when queue mapping is set, just ignore
-comment|// the queueInfo here, and move forward
-block|}
-comment|// check labels in the resource request.
 name|String
 name|labelExp
 init|=
@@ -969,55 +1126,6 @@ operator|.
 name|getNodeLabelExpression
 argument_list|()
 decl_stmt|;
-comment|// if queue has default label expression, and RR doesn't have, use the
-comment|// default label expression of queue
-if|if
-condition|(
-name|labelExp
-operator|==
-literal|null
-operator|&&
-name|queueInfo
-operator|!=
-literal|null
-operator|&&
-name|ResourceRequest
-operator|.
-name|ANY
-operator|.
-name|equals
-argument_list|(
-name|resReq
-operator|.
-name|getResourceName
-argument_list|()
-argument_list|)
-condition|)
-block|{
-name|labelExp
-operator|=
-name|queueInfo
-operator|.
-name|getDefaultNodeLabelExpression
-argument_list|()
-expr_stmt|;
-block|}
-comment|// If labelExp still equals to null, set it to be NO_LABEL
-name|resReq
-operator|.
-name|setNodeLabelExpression
-argument_list|(
-name|labelExp
-operator|==
-literal|null
-condition|?
-name|RMNodeLabelsManager
-operator|.
-name|NO_LABEL
-else|:
-name|labelExp
-argument_list|)
-expr_stmt|;
 comment|// we don't allow specify label expression other than resourceName=ANY now
 if|if
 condition|(
