@@ -6879,6 +6879,146 @@ name|FAILED
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**    * Test validateAndCreateResourceRequest fails on recovery, app should ignore    * this Exception and continue    */
+annotation|@
+name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|30000
+argument_list|)
+DECL|method|testAppFailToValidateResourceRequestOnRecovery ()
+specifier|public
+name|void
+name|testAppFailToValidateResourceRequestOnRecovery
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|MemoryRMStateStore
+name|memStore
+init|=
+operator|new
+name|MemoryRMStateStore
+argument_list|()
+decl_stmt|;
+name|memStore
+operator|.
+name|init
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+name|rm1
+operator|=
+operator|new
+name|MockRM
+argument_list|(
+name|conf
+argument_list|,
+name|memStore
+argument_list|)
+expr_stmt|;
+name|rm1
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|MockNM
+name|nm1
+init|=
+operator|new
+name|MockNM
+argument_list|(
+literal|"127.0.0.1:1234"
+argument_list|,
+literal|8192
+argument_list|,
+name|rm1
+operator|.
+name|getResourceTrackerService
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|nm1
+operator|.
+name|registerNode
+argument_list|()
+expr_stmt|;
+name|RMApp
+name|app1
+init|=
+name|rm1
+operator|.
+name|submitApp
+argument_list|(
+literal|200
+argument_list|)
+decl_stmt|;
+name|MockAM
+name|am1
+init|=
+name|MockRM
+operator|.
+name|launchAndRegisterAM
+argument_list|(
+name|app1
+argument_list|,
+name|rm1
+argument_list|,
+name|nm1
+argument_list|)
+decl_stmt|;
+comment|// Change the config so that validateAndCreateResourceRequest throws
+comment|// exception on recovery
+name|conf
+operator|.
+name|setInt
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|RM_SCHEDULER_MINIMUM_ALLOCATION_MB
+argument_list|,
+literal|50
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setInt
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|RM_SCHEDULER_MAXIMUM_ALLOCATION_MB
+argument_list|,
+literal|100
+argument_list|)
+expr_stmt|;
+name|rm2
+operator|=
+operator|new
+name|MockRM
+argument_list|(
+name|conf
+argument_list|,
+name|memStore
+argument_list|)
+expr_stmt|;
+name|nm1
+operator|.
+name|setResourceTrackerService
+argument_list|(
+name|rm2
+operator|.
+name|getResourceTrackerService
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|rm2
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 end_class
 
